unpackaged/objects/Contract_template__c.object
<CustomObject>
  <description>Used for mapping contracts in SFDC to contract templates in Movex on behalf of Customer Service</description>
  <fields>
    <fullName>Discount_additional__c</fullName>
    <label>Discount, additional</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
  </fields>
  <fields>
    <fullName>Discount_contract__c</fullName>
    <label>Discount, contract</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
  </fields>
  <fields>
    <fullName>Discount_equipment__c</fullName>
    <label>Discount, equipment</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
  </fields>
  <fields>
    <fullName>Discount_materials__c</fullName>
    <label>Discount, materials</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
  </fields>
  <fields>
    <fullName>Discount_model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Discount model</label>
    <referenceTo>Discount_model__c</referenceTo>
    <relationshipLabel>Contract templates</relationshipLabel>
    <relationshipName>Contract_templates</relationshipName>
    <type>Lookup</type>
  </fields>
  <fields>
    <fullName>Movex_template__c</fullName>
    <label>Movex template</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Type_Contract__c</fullName>
    <label>Type, Contract</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <label>Contract template</label>
  <listViews>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Movex_template__c</columns>
    <columns>Discount_equipment__c</columns>
    <columns>Discount_materials__c</columns>
    <columns>Discount_additional__c</columns>
    <columns>Discount_contract__c</columns>
    <columns>Type_Contract__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
  </listViews>
  <nameField>
    <displayFormat>CT-{0000}</displayFormat>
    <label>Contract template Name</label>
    <type>AutoNumber</type>
  </nameField>
  <pluralLabel>Contract templates</pluralLabel>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>